[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Scripts/Timer.gd" type="Script" id=1]
[ext_resource path="res://Resources/Background/Texture-176.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/Scripts/Game_Window.gd" type="Script" id=4]
[ext_resource path="res://Resources/Background/purple_button_hover_mini_template.jpg" type="Texture" id=6]
[ext_resource path="res://Resources/Background/blue_button_mini_template.jpg" type="Texture" id=7]
[ext_resource path="res://Resources/Background/cyan_button_pressed_mini_template.jpg" type="Texture" id=8]
[ext_resource path="res://Resources/Background/teal_button_pressed_mini_template.jpg" type="Texture" id=9]
[ext_resource path="res://Resources/Background/blue_button_pressed_mini_template.jpg" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
outline_color = Color( 0.823529, 0.0313726, 0.870588, 1 )
font_data = SubResource( 1 )

[node name="Game_Window" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 2.70966
margin_top = 1.74872
margin_right = 3002.71
margin_bottom = 3001.75
rect_min_size = Vector2( 600, 600 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 4.0
margin_right = 1002.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 90 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTL_CASH" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 90.0
rect_min_size = Vector2( 110, 60 )
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 10
tab_size = 10
text = "CASH: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTL_CASH_VAR" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 274.0
margin_bottom = 90.0
rect_min_size = Vector2( 160, 60 )
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 10
tab_size = 10
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 608.0
margin_right = 908.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTL_SCORE" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_right = 130.0
margin_bottom = 90.0
rect_min_size = Vector2( 130, 60 )
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 10
tab_size = 10
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTL_SCORE_VAR" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 134.0
margin_right = 294.0
margin_bottom = 90.0
rect_min_size = Vector2( 160, 60 )
custom_fonts/normal_font = SubResource( 2 )
visible_characters = 10
tab_size = 10
text = "0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="GAMEMENU_TextureButton" type="TextureButton" parent="."]
margin_left = 15.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 21.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GAMEMENU_TextureButton"]
margin_left = 26.042
margin_right = 69.042
margin_bottom = 14.0
text = "MENU"

[node name="OPTIONS_TextureButton2" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 23.5646
margin_right = 116.0
margin_bottom = 37.5646
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OPTIONS_TextureButton2"]
margin_left = 17.0167
margin_right = 76.0167
margin_bottom = 14.0
text = "OPTIONS"

[node name="SCORES_TextureButton3" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 39.5924
margin_right = 117.0
margin_bottom = 52.5924
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SCORES_TextureButton3"]
margin_left = 23.0
margin_right = 76.0
margin_bottom = 14.0
text = "SCORES"

[node name="DRAFTCARDS_TextureButton4" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 55.157
margin_right = 117.0
margin_bottom = 68.157
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DRAFTCARDS_TextureButton4"]
margin_left = 26.0
margin_right = 71.0
margin_bottom = 14.0
text = "DRAFT"

[node name="NEWGAME_TextureButton5" type="TextureButton" parent="."]
margin_left = 17.5688
margin_top = 88.1565
margin_right = 117.569
margin_bottom = 102.157
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NEWGAME_TextureButton5"]
margin_left = 14.6302
margin_right = 86.6302
margin_bottom = 14.0
text = "NEW GAME"

[node name="TITLESCREEN_TextureButton6" type="TextureButton" parent="."]
margin_left = 17.0
margin_top = 71.6613
margin_right = 117.0
margin_bottom = 85.6613
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TITLESCREEN_TextureButton6"]
margin_left = 8.51395
margin_right = 92.5139
margin_bottom = 14.0
text = "TITLE SCREEN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GAMEMENU_TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="OPTIONS_TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="SCORES_TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="DRAFTCARDS_TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="NEWGAME_TextureButton5" to="." method="_on_TextureButton5_pressed"]
[connection signal="pressed" from="TITLESCREEN_TextureButton6" to="." method="_on_TextureButton6_pressed"]
